<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#3d84b8"
    tools:context=".quizActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3d84b8"

            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_dogruSayisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/dogru"
                android:layout_marginTop="30dp"
                android:layout_marginStart="60dp"/>

            <TextView
                android:id="@+id/texview_yanlisSayisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/yanlis"
                android:layout_marginTop="-24dp"
                android:layout_marginStart="250dp"/>

            <TextView
                android:id="@+id/texview_SoruSayisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/Soru"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"/>

        </LinearLayout>





    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#3d84b8"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView_bayrak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/turkiye" />

            <Button
                android:id="@+id/btn_a"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#583d72"
                android:text="@string/Almanya"
                android:layout_marginTop="10dp"/>
            <Button
                android:id="@+id/btn_b"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#583d72"
                android:text="@string/Türkiye"
                android:layout_marginTop="2dp"/>
            <Button
                android:id="@+id/btn_c"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#583d72"
                android:text="@string/İtalya"
                android:layout_marginTop="2dp"/>
            <Button
                android:id="@+id/btn_d"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#583d72"
                android:text="@string/Rusya"
                android:layout_marginTop="2dp"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>




</LinearLayout>